# MagicOfTheC

./: .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  Makefile  README.md  TODO.md  WORKSPACE  create.mjs  create.sh  get_started.md  gtest.BUILD  list_cycled  package.json
bazel/: BUILD  c_compile.bzl  code_generator.py  codegen.bzl
bazel/codegen/: foo.cpp.template  foo.hpp.template  use.md
cmake/: FindGMP.cmake
src/: B_plus.c  SparceMatrix.cpp  queue_arr.c  queue_dyn.c  type_generic.c  vector.c
src/AVLtree/: main.c
src/BigAlgebra/: gmp_example.cpp  new_algo.c  new_algo.cpp  on_vectors.cpp  readme.md  summ.cpp
src/Deikstra/: Deikstra.c  source.txt  stack.h  symbol.h  tree.h
src/HashTable/: main.c
src/Multithreading/: sigsAndCond.c  threadCreating.c  with_mutex.c  without_mutex.c
src/Multithreading/semaphores/: easy.c  library.c  restraunt.cpp
src/algo/: Bellman–Ford.cpp  CMakeLists.txt  Dijkstra_graph.cpp  Eratosphen.cpp  bfs.cpp  dfs.cpp  z_func.cpp
src/cpp/: BST.cpp  BST.hpp  BaseIterator.h  CMakeLists.txt  LVecor.cpp  RB_BST.cpp  RB_BST.hpp  Variadic_function.cpp  allocstor_party.cpp  hello.cpp  listt.cpp  oop_test.cpp  raii.cpp  smart_ptrs.cpp  templates_class.cpp  templates_func.cpp  vector_merge.cpp
src/dequeue/: main.c
src/kp9/: input.txt  main.c  readme.md  table.c  table.h
src/lab24/: Tests.txt  main  main.c  stack.c  stack.h  symbol.h  token.h  tree.h  Тесты к Си.txt
src/lab26/: main.c  stress.c
src/leet/: ContainerWithMostWater.cpp  IntToRoman.cpp
src/linear_list/: BUILD  list  list.c  main.c
src/linear_list/iterator/: iterator.c  iterator.h
src/linear_list/list/: list.c  list.h
src/linear_list_cycled/: BUILD  main  main.c
src/linear_list_cycled/iterator/: iterator.c  iterator.h
src/linear_list_cycled/list/: list.c  list.h
src/meow/: main.c  meow.txt
src/polymorphism/: main.c  main2.c  main3.c
src/queue/: BUILD  queue_arr.c  queue_dyn.c  queue_dyn_lib.c  queue_dyn_lib.h  queue_static_lib.c  queue_static_lib.h
src/search/: binary_search.c  binary_search.h
src/sort/: heap_sort.c  heap_sort.h  merge_sort.c  merge_sort.h
src/sort/heap/: heap_sort.c  heap_sort.h
src/sort/merge/: merge_sort.c  merge_sort.h
src/stack/: BUILD  stack_arr.c  stack_arr_lib.c  stack_arr_lib.h
src/stepik/: CMakeLists.txt
src/stepik/11/: str_4.c  str_bomb1.c  str_bomb2.c  str_bomb3.c  str_bomb4.c  str_bomb5.cpp  str_len.c
src/stepik/12/: qsort_1.c  qsort_2.c  qsort_3.cpp  qsort_5.c  qsort_6.c  qsort_7.c  qsort_8.c  qsort_9.c
src/stepik/14/: elong_add2.c  elong_add3.c  str_bomb5_mem.cpp  toLongN.c
src/stepik/15-stack/: 15_stack.cpp  15_stack_dyn.cpp  15_stack_static.cpp  stack_skobki.cpp
src/stepik/16_list1/: 16_list1.cpp  list2.cpp
src/stepik/17_list_withNextPrev/: list2.cpp  list2.h  list_3.cpp
src/stepik/18_tree/: 18_ctree_lib.c  18_ctree_lib.h  18_tree.c  tree.cpp  tree_2.c  tree_3.c  tree_4.cpp  tree_5.c  tree_lvl.c  word_tree.c
src/stepik/19/: bit_1.cpp  bit_2.cpp  bit_3.cpp  bit_4.c  bit_5.cpp  bit_rwx.cpp  print_bin.c
src/stepik/8/: elong_add.c  elong_print.c  struct_card.c
src/tree/: BUILD  test1.txt  tree.c  tree_lib  tree_lib.c  tree_lib.h
src/vector/: BUILD  BUILD.bazel  vector.c  vector_lib.c  vector_lib.h
tests/: BUILD  vector_unittest.cc
