cmake_minimum_required(VERSION 3.29)
project(stepik C CXX)

set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 23)

add_executable(stepik 12/qsort_1.c)
add_executable(qsort_2 12/qsort_2.c)
add_executable(qsort_3 12/qsort_3.cpp)
add_executable(qsort_8 12/qsort_8.c)
target_link_libraries(qsort_8 m)
add_executable(qsort_6 12/qsort_6.c)
add_executable(qsort_7 12/qsort_7.c)
add_executable(str_4 11/str_4.c)
add_executable(str_len 11/str_len.c)
add_executable(str_bomb1 11/str_bomb1.c)
add_executable(str_bomb2 11/str_bomb2.c)
add_executable(str_bomb3 11/str_bomb3.c)
add_executable(str_bomb4 11/str_bomb4.c)
