cmake_minimum_required(VERSION 3.29)
project(stepik C CXX)

set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 23)

add_executable(stepik 12/qsort_1.c)
add_executable(qsort_2 12/qsort_2.c)
add_executable(qsort_3 12/qsort_3.cpp)
add_executable(qsort_8 12/qsort_8.c)
target_link_libraries(qsort_8 m)
add_executable(qsort_6 12/qsort_6.c)
add_executable(qsort_7 12/qsort_7.c)
add_executable(str_4 11/str_4.c)
add_executable(str_len 11/str_len.c)
add_executable(str_bomb1 11/str_bomb1.c)
add_executable(str_bomb2 11/str_bomb2.c)
add_executable(str_bomb3 11/str_bomb3.c)
add_executable(str_bomb4 11/str_bomb4.c)
add_executable(qsort_9 12/qsort_9.c)
add_executable(struct_card 8/struct_card.c)
add_executable(elong_print 8/elong_print.c)
add_executable(elong_add 8/elong_add.c)
add_executable(elong_add2 14/elong_add2.c)
add_executable(elong_add3 14/elong_add3.c)
add_executable(toLongN 14/toLongN.c)
add_executable(15_stack_dyn 15-stack/15_stack_dyn.cpp)
add_executable(15_stack 15-stack/15_stack_static.cpp
        18_tree/tree_2.c)
add_executable(stack_skobki 15-stack/stack_skobki.cpp)
add_executable(16_stack1 16_list1/16_list1.cpp)

add_executable(18_tree 18_tree/18_tree.c)
add_executable(tree 18_tree/tree.cpp)
add_executable(list_3 17_list_withNextPrev/list_3.cpp)

add_library(list2 17_list_withNextPrev/list2.h)
target_link_libraries(list_3 PUBLIC list2)

add_library(18_ctree_lib 18_tree/18_ctree_lib.h)
add_executable(tree_2 18_tree/tree_2.c)
target_link_libraries(tree_2 PUBLIC 18_ctree_lib)
add_executable(tree_4 18_tree/tree_4.cpp)
target_link_libraries(tree_4 PUBLIC 18_ctree_lib)

add_executable(tree_3 18_tree/tree_3.c)
target_link_libraries(tree_3 PUBLIC 18_ctree_lib)
add_executable(tree_5 18_tree/tree_5.c)
target_link_libraries(tree_3 PUBLIC 18_ctree_lib m)
add_executable(tree_lvl 18_tree/tree_lvl.c)
target_link_libraries(tree_lvl PUBLIC 18_ctree_lib m)
